--- a/getmestuff/package.json
+++ b/getmestuff/package.json
@@ -19,5 +19,10 @@
     "pagepiling.js": "^1.5.4",
     "skrollr": "^0.6.26",
     "vue": "^2.1.10"
+  },
+  "dependencies": {
+    "pagepiling.js": "^1.5.4",
+    "parsleyjs": "^2.7.2",
+    "validate.js": "^0.11.1"
   }
 }
