--- a/getmestuff/package.json
+++ b/getmestuff/package.json
@@ -16,13 +16,11 @@
     "jquery": "^3.1.1",
     "laravel-mix": "0.*",
     "lodash": "^4.17.4",
-    "pagepiling.js": "^1.5.4",
-    "skrollr": "^0.6.26",
     "vue": "^2.1.10"
   },
   "dependencies": {
+    "owl.carousel": "^2.2.0",
     "pagepiling.js": "^1.5.4",
-    "parsleyjs": "^2.7.2",
-    "validate.js": "^0.11.1"
+    "parsleyjs": "^2.7.2"
   }
 }
