--- a/getmestuff/composer.json
+++ b/getmestuff/composer.json
@@ -6,9 +6,12 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "laravel/cashier": "~7.0",
         "laravel/dusk": "^1.1",
         "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "predis/predis": "^1.1",
+        "stripe/stripe-php": "^4.12"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
