--- a/getmestuff/package.json
+++ b/getmestuff/package.json
@@ -19,6 +19,7 @@
     "vue": "^2.1.10"
   },
   "dependencies": {
+    "moment": "^2.18.1",
     "owl.carousel": "^2.2.0",
     "pagepiling.js": "^1.5.4",
     "parsleyjs": "^2.7.2"
