--- a/getmestuff/composer.json
+++ b/getmestuff/composer.json
@@ -7,12 +7,12 @@
     "require": {
         "php": ">=5.6.4",
         "barryvdh/laravel-debugbar": "^2.4",
+        "braintree/braintree_php": "^3.23",
         "laravel/cashier": "~7.0",
         "laravel/dusk": "^1.1",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "predis/predis": "^1.1",
-        "stripe/stripe-php": "^4.12"
+        "predis/predis": "^1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
