--- a/getmestuff/composer.json
+++ b/getmestuff/composer.json
@@ -11,6 +11,7 @@
         "laravel/cashier": "~7.0",
         "laravel/dusk": "^1.1",
         "laravel/framework": "5.4.*",
+        "laravel/passport": "^2.0",
         "laravel/tinker": "~1.0",
         "predis/predis": "^1.1"
     },
