--- a/getmestuff/public/mix-manifest.json
+++ b/getmestuff/public/mix-manifest.json
@@ -4,5 +4,6 @@
   "/js/app.js": "/js/app.js",
   "/js/plugins/skrollr.js": "/js/plugins/skrollr.js",
   "/admin/app.js": "/admin/app.js",
-  "/admin/admin.css": "/admin/admin.css"
+  "/admin/admin.css": "/admin/admin.css",
+  "/admin/myadmin.css": "/admin/myadmin.css"
 }
