--- a/getmestuff/composer.json
+++ b/getmestuff/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "5.4.*",
         "laravel/passport": "^2.0",
         "laravel/tinker": "~1.0",
+        "php-imap/php-imap": "^2.0",
         "predis/predis": "^1.1",
         "yajra/laravel-datatables-oracle": "^7.5"
     },
