--- a/getmestuff/composer.json
+++ b/getmestuff/composer.json
@@ -8,11 +8,13 @@
         "php": ">=5.6.4",
         "barryvdh/laravel-debugbar": "^2.4",
         "braintree/braintree_php": "^3.23",
+        "dimsav/laravel-translatable": "^7.3",
         "laravel/cashier": "~7.0",
         "laravel/dusk": "^1.1",
         "laravel/framework": "5.4.*",
         "laravel/passport": "^2.0",
         "laravel/tinker": "~1.0",
+        "mcamara/laravel-localization": "^1.2",
         "php-imap/php-imap": "^2.0",
         "predis/predis": "^1.1",
         "yajra/laravel-datatables-oracle": "^7.5"
